2003-10-13  Kevin Buettner  <kevinb@redhat.com>

	* breakpoint.h (struct breakpoint): Add new member
	``requested_address''.
	* breakpoint.c (breakpoint_adjustment_warning)
	(adjust_breakpoint_address): New static functions.
	(print_it_typical): Issue warning if breakpoint's address is different
	from its requested address.
	(set_raw_breakpoint, set_longjmp_resume_breakpoint, watch_command_1)
	(breakpoint_re_set_one):  Set breakpoint's
	``requested_address'' field.  Set ``address'' field to the
	result of calling adjust_breakpoint_address() on the requested
	address.

2003-10-13  Kevin Buettner  <kevinb@redhat.com>

 	* gdbarch.sh (ADJUST_BREAKPOINT_ADDRESS): New method.
 	* gdbarch.h, gdbarch.c: Regenerate.

2003-10-11  Mark Kettenis  <kettenis@gnu.org>

	* i386bsd-tdep.c (i386bsd_init_abi): Use ARRAY_SIZE to initialize
	TDEP->sc_num_regs.

	* i386fbsd-tdep.c: New file.
	(i386fbsd_sigtramp_start, i386fbsd_sigtramp_end,
	i386fbsd_sc_reg_offset, i386fbsdaout_init_abi, i386fbsd_init_abi,
	i386fbsd4_sc_reg_offset, i386fbsd4_init_abi): Move here from
	i386bsd-tdep.c.
	(_initialize_i386fbsd_tdep): New function.
	(i386fbsd_r_reg_offset, i386fbsd4_r_reg_offset): New varibles.
	(i386fbsdaout_init_abi): Initialize TDEP->gregset_reg_offset,
	TDEP->gregset_num_regs, TDEP->sizeof_gregset and
	TDEP->sizeof_fpregset.  Use ARRAY_SIZE to initialize
	TDEP->sc_num_regs.
	(i386fbsd4_init_abi): Initialize TDEP->gregset_reg_offset,
	TDEP->gregset_num_regs and TDEP->sizeof_gregset.  Use ARRAY_SIZE
	to initialize TDEP->sc_num_regs.
	* i386bsd-tdep.c (i386fbsd_sigtramp_start, i386fbsd_sigtramp_end,
	i386fbsd_sc_reg_offset, i386fbsdaout_init_abi, i386fbsd_init_abi,
	i386fbsd4_sc_reg_offset, i386fbsd4_init_abi): Remove.
	(_initialize_i386bsd_tdep): Don't register FreeBSD a.out and
	FreeBSD ELF OS/ABI's here.
	* Makefile.in (ALLDEPFILES): Add i386fbsd-tdep.c.
	(i386fbsd-tdep.o): New target.
	* config/i386/fbsd.mt (TDEPFILES): Add i386fbsd-tdep.o.